monitoring/otro-influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  namespace: monitoring
  labels:
    app: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
    spec:
      containers:
      - name: influxdb
        image: docker.io/influxdb:1.8
        ports:
          - containerPort: 8086
        volumeMounts:
          - name: var-lib-influxdb
            mountPath: /var/lib/influxdb
      volumes:
      - name: var-lib-influxdb
        persistentVolumeClaim:
          claimName: influxdb-pvc
