monitoring/influxdb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    labels:
        app: influxdb
    name: influxdb
    namespace: monitoring
spec:
    replicas: 1
    selector:
        matchLabels:
            app: influxdb
    serviceName: influxdb
    template:
        metadata:
            labels:
                app: influxdb
        spec:
            containers:
              - image: influxdb:2.0.6
                name: influxdb
                ports:
                  - containerPort: 8086
                    name: influxdb
                volumeMounts:
                  - mountPath: /var/lib/influxdb2
                    name: data
                # envFrom:
                #       - secretRef:
                #           name: influxdb-creds
    volumeClaimTemplates:
      - metadata:
            name: data
            namespace: monitoring
        spec:
            accessModes:
              - ReadWriteOnce
            resources:
                requests:
                    storage: 10G
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '8086'
spec:
  selector:
    app: influxdb
  type: NodePort
  ports:
    - name: influxdb
      port: 80
      targetPort: 8086
      nodePort: 31000
