monitoring/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
  
spec:
  selector: 
    app: prometheus-server
  type: NodePort  
  ports:
    - port: 80
      targetPort: 9090 
      nodePort: 30000

##para declararlo como un clusterIP
# spec:
#   selector: 
#     app: prometheus-server
#   type: ClusterIP  
#   ports:
#     - port: 80
#       targetPort: 9090 
#       protocol: TCP
#       name: http
