monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  rules:
  - host: grafana.demo.com
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts: 
    - grafana.demo.com
    secretName: grafana-cert-tls
# ---
# apiVersion: v1 
# kind: Secret 
# metadata:
#   name: grafana-secret 
#   namespace: monitoring
# data:
# # USe base64 in the certs
#   tls.crt: 
#   tls.key:
