monitoring/influxdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: influxdb.demo.com
    http:
      paths:
      - backend:
          service:
            name: influxdb
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts: 
    - influxdb.demo.com
    secretName: influxdb-cert-tls
